2000-05-02  Oliver Kiddle  <opk@zsh.org>

	* 11065: Completion/Commands/_complete_debug: small fix to avoid
	using slashes in temporary file name

2000-05-02  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11061: Functions/Misc/zrecompile: make zrecompile detect deleted
 	and new files
	
	* 11060: Doc/Zsh/compsys.yo: two more doc fixes
	
2000-05-02  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11057: Src/builtin.c:  getopts for options with arguments
	miscounted $OPTIND and index into subsequent options (see 9095).

2000-05-02  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11058: Completion/Core/_message, Doc/Zsh/compwid.yo, Src/Zle/comp.h,
 	Src/Zle/compcore.c, Src/Zle/complete.c: add -x option to compadd
 	to display message unconditionally
	
	* 11053: Completion/Commands/_complete_help: always use empty
 	matcher-list style in _complete_help
	
	* 11052: Src/Zle/computil.c: fix for _arguments, use
 	on-line-argument-numbers only for normal arguments, not for
 	arguments of options
	
	* 11049: Completion/Base/_arguments, Completion/Base/_first,
 	Completion/Builtins/_hash, Completion/Core/_expand,
 	Completion/User/_gprof, Completion/User/_mount,
 	Completion/User/_socket, Completion/User/_urls: completion
 	cleanup, mostly _wanted and $expl
	
	* 11048: Completion/Base/_first, Completion/Core/_complete,
 	Completion/Core/_path_files: make completion-in-vared complete
 	parameter values as default; cleanup for _path_files
	
	* 11047: Completion/Core/_sort_tags, Doc/Zsh/compsys.yo,
 	Doc/Zsh/compwid.yo: completion doc fixes and cleanup; _sort_tags
 	updated
	
2000-05-01  Bart Schaefer  <schaefer@zsh.org>

	* 11043: Completion/Core/_expand, Completion/User/_nedit: Catch
	an eval-time parse error by forcing the eval into a subshell;
	don't fail on nonexistent ~/.nedit file.

2000-05-01  Oliver Kiddle  <opk@zsh.org>

	* 11041: Completion/User/.distfiles, Completion/User/_bzip2:
	Use of _arguments for bzip2 completion
